branches/darc/Tools/IDLParser/src/parsing/javaccparser/IDLParser.java
/* Generated By:JavaCC: Do not edit this line. IDLParser.java */
package parsing.javaccparser;

import java.io.FileNotFoundException;
import java.util.logging.Level;
import java.util.logging.Logger;
import parsing.IDLField;

public class IDLParser implements IDLParserConstants {

    private IDLField currentIDLField;

    public ParserEvent<String> packageDeclareEvent = new ParserEvent<String>();
    public ParserEvent<String> idlDeclareEvent = new ParserEvent<String>();
    public ParserEvent<String> enumDeclareEvent = new ParserEvent<String>();
    public ParserEvent<String> idlCloseEvent = new ParserEvent<String>();
    public ParserEvent<String> enumCloseEvent = new ParserEvent<String>();
    public ParserEvent<IDLField> fieldDeclareEvent = new ParserEvent<IDLField>();
    public ParserEvent<String> extendsEvent = new ParserEvent<String>();
    public ParserEvent<String> enumElementEvent = new ParserEvent<String>();
    public ParserEvent<String> commentEvent = new ParserEvent<String>();

  public static void main(String args[])
  {
    try
    {
        IDLParser parser;
        parser = new IDLParser(new java.io.FileInputStream("TestIDL.idl"));

        parser.idlDeclareEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("class " + eventData + " declared.");
                }
            });
        parser.idlCloseEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("class " + eventData + " done.");
                }
            });

        parser.packageDeclareEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("package " + eventData + " declared.");
                }
            });

        parser.enumDeclareEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("enum " + eventData + " declared.");
                }
            });
        parser.enumCloseEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("enum " + eventData + " done.");
                }
            });
        parser.enumElementEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("enum element " + eventData + ".");
                }
            });
        parser.fieldDeclareEvent.add(new ParserEventCallback<IDLField>() {

                public void onEvent(IDLField eventData, ParserEvent e)
                {
                    System.out.println("field  " + eventData + ".");
                }
            });
        parser.extendsEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("extends  " + eventData + ".");
                }
            });


        parser.specification();
    }
    catch (ParseException ex)
    {
        Logger.getLogger(IDLParser.class.getName()).log(Level.SEVERE, null, ex);
    }
    catch (FileNotFoundException ex)
    {
        Logger.getLogger(IDLParser.class.getName()).log(Level.SEVERE, null, ex);
    }
  }

/* Production 1 */
  final public void specification() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 7:
      definition();
      break;
    case ANOTATION:
      label_1:
      while (true) {
        jj_consume_token(ANOTATION);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ANOTATION:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* Production 2 */
  final public void definition() throws ParseException {
    jj_consume_token(7);
    module();
    jj_consume_token(8);
    label_2:
    while (true) {
      body_declare();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 10:
      case 11:
      case ANOTATION:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(0);
  }

  final public void body_declare() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 10:
    case 11:
      type_declare();
      break;
    case ANOTATION:
      jj_consume_token(ANOTATION);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void type_declare() throws ParseException {
    if (jj_2_1(2)) {
      struct_type();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        enum_type();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/* Production 3 */
  final public String module() throws ParseException {
  String packName = ""; String tName = "";
    tName = identifier();
                         packName += tName;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 9:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      jj_consume_token(9);
                                                     packName += ".";
      tName = identifier();
                                                                                             packName += tName;
    }
        packageDeclareEvent.fireEvent(packName);
        {if (true) return packName;}
    throw new Error("Missing return statement in function");
  }

  final public String struct_type() throws ParseException {
    String name = "";
    String parName = "";
    jj_consume_token(10);
    name = identifier();
                             idlDeclareEvent.fireEvent(name);
    member_list();
    {idlCloseEvent.fireEvent(name);}
    System.out.println("struct " + name);
    {if (true) return name;}
    throw new Error("Missing return statement in function");
  }

  final public String enum_type() throws ParseException {
 String name = "";
    jj_consume_token(11);
    name = identifier();
                               enumDeclareEvent.fireEvent(name);
    jj_consume_token(12);
    enum_body();
    jj_consume_token(13);
        enumCloseEvent.fireEvent(name);
        {if (true) return name;}
    throw new Error("Missing return statement in function");
  }

  final public void enum_body() throws ParseException {
 String tName = "";String ANOTATION = ""; String tANOTATION = "";
    tName = identifier();
                        enumElementEvent.fireEvent(tName);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 14:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      jj_consume_token(14);
      tName = identifier();
                                                                                        enumElementEvent.fireEvent(tName);
    }
  }

/* Production 51 */
  final public void member_list() throws ParseException {
 String tName = "";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 15:
      jj_consume_token(15);
      tName = idl_type();
                                extendsEvent.fireEvent(tName);
      jj_consume_token(12);
      label_5:
      while (true) {
        member();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 18:
        case 19:
        case 20:
        case 21:
        case 22:
        case 23:
        case 24:
        case 25:
        case 26:
        case ID:
        case ANOTATION:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_5;
        }
      }
      jj_consume_token(13);
      break;
    default:
      jj_la1[9] = jj_gen;
      if (jj_2_2(2)) {
        jj_consume_token(12);
        label_6:
        while (true) {
          member();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 18:
          case 19:
          case 20:
          case 21:
          case 22:
          case 23:
          case 24:
          case 25:
          case 26:
          case ID:
          case ANOTATION:
            ;
            break;
          default:
            jj_la1[8] = jj_gen;
            break label_6;
          }
        }
        jj_consume_token(13);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/* Production 52 */
  final public void member() throws ParseException {
 String typeName = ""; String fieldName = "";String comment = ""; String tComment = "";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 18:
    case 19:
    case 20:
    case 21:
    case 22:
    case 23:
    case 24:
    case 25:
    case 26:
    case ID:
   currentIDLField = new IDLField(fieldName, "");
      typeName = type_spec();
      fieldName = declarators(currentIDLField);
      jj_consume_token(8);
    if(fieldName.contains("[") && fieldName.contains("]"))
    {
        typeName = typeName.trim() + fieldName.substring(fieldName.indexOf("["), fieldName.indexOf("]") + 1);
        fieldName = fieldName.replace("[", "").trim();
        fieldName = fieldName.replace("]", "").trim();
        //currentIDLField.setArray(true);
    }

    currentIDLField.setName(fieldName);
    currentIDLField.setType(typeName);
    fieldDeclareEvent.fireEvent(currentIDLField);
      break;
    case ANOTATION:
      comment = jj_consume_token(ANOTATION).image;
     commentEvent.fireEvent(comment);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public String identifier() throws ParseException {
  String name = "";
    name = jj_consume_token(ID).image;
    {if (true) return name;}
    throw new Error("Missing return statement in function");
  }

  final public String declarators(IDLField currentIDLField) throws ParseException {
 String ret = "";
 String size = "";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      ret = declarator();
   {if (true) return ret;}
      break;
    case 16:
      jj_consume_token(16);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DECIMALINT:
        size = jj_consume_token(DECIMALINT).image;
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      jj_consume_token(17);
      ret = declarator();
     if(!size.equals(""))
     {
        currentIDLField.setArraySize(Integer.parseInt(size));
     }

     {if (true) return "[" + size + "] " + ret;}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* Production 35 */
  final public String declarator() throws ParseException {
 String ret = "";
    ret = simple_declarator();
   {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public String type_spec() throws ParseException {
 String ret = "";
    ret = simple_type_spec();
  {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public String simple_type_spec() throws ParseException {
 String ret = "";
    ret = base_type_spec();
   {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public String complex_type_spec() throws ParseException {
 String ret = "";
    ret = base_type_spec();
    fixed_array_size();
 {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public String base_type_spec() throws ParseException {
 String typeName = "";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 19:
    case 20:
      typeName = floating_pt_type();
   {if (true) return typeName;}
      break;
    case 21:
    case 22:
    case 23:
    case 24:
      typeName = integer_type();
   {if (true) return typeName;}
      break;
    case 25:
      typeName = boolean_type();
   {if (true) return typeName;}
      break;
    case 26:
      typeName = string_type();
   {if (true) return typeName;}
      break;
    case ID:
      typeName = idl_type();
    currentIDLField.setIdlType(true);
    {if (true) return typeName;}
      break;
    case 18:
      typeName = abs_idl_type();
    currentIDLField.setIdlType(true);
    currentIDLField.setAbstract(true);
    {if (true) return typeName;}
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String idl_type() throws ParseException {
  String className = ""; String tName = ""; String fieldName = "";
    tName = identifier();
                         className += tName;
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 9:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_7;
      }
      jj_consume_token(9);
                                                      className += ".";
      tName = identifier();
                                                                                               className += tName;
    }
        {if (true) return className;}
    throw new Error("Missing return statement in function");
  }

  final public String abs_idl_type() throws ParseException {
  String className = ""; String tName = ""; String fieldName = "";
    jj_consume_token(18);
    tName = identifier();
                                   className += tName;
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 9:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_8;
      }
      jj_consume_token(9);
                                                                className += ".";
      tName = identifier();
                                                                                                         className += tName;
    }
        {if (true) return className;}
    throw new Error("Missing return statement in function");
  }

  final public String idl_type_array() throws ParseException {
  String className = ""; String tName = ""; String fieldName = "";
    className = idl_type();
    jj_consume_token(16);
    jj_consume_token(17);
        {if (true) return className;}
    throw new Error("Missing return statement in function");
  }

  final public String simple_declarator() throws ParseException {
 String ret = "";
    ret = identifier();
   {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public String complex_declarator() throws ParseException {
 String ret = "";
    ret = array_declarator();
    {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public String array_declarator() throws ParseException {
 String ret = "";
    fixed_array_size();
    ret = identifier();
    {if (true) return ret ;}
    throw new Error("Missing return statement in function");
  }

/* Production 64 */
  final public void fixed_array_size() throws ParseException {
    jj_consume_token(16);
    jj_consume_token(17);
  }

/* Production 38 */
  final public String floating_pt_type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 19:
      jj_consume_token(19);
   {if (true) return "float" ;}
      break;
    case 20:
      jj_consume_token(20);
   {if (true) return "double" ;}
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* Production 39 */
  final public String integer_type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 21:
      jj_consume_token(21);
   {if (true) return "int" ;}
      break;
    case 22:
      jj_consume_token(22);
   {if (true) return "short" ;}
      break;
    case 23:
      jj_consume_token(23);
   {if (true) return "long" ;}
      break;
    case 24:
      jj_consume_token(24);
   {if (true) return "byte" ;}
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* Production 47 */
  final public String boolean_type() throws ParseException {
    jj_consume_token(25);
   {if (true) return "boolean" ;}
    throw new Error("Missing return statement in function");
  }

  final public String string_type() throws ParseException {
    jj_consume_token(26);
   {if (true) return "string" ;}
    throw new Error("Missing return statement in function");
  }

/* Production 48 */
  final public void integer_literal() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OCTALINT:
      jj_consume_token(OCTALINT);
      break;
    case DECIMALINT:
      jj_consume_token(DECIMALINT);
      break;
    case HEXADECIMALINT:
      jj_consume_token(HEXADECIMALINT);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void string_literal() throws ParseException {
    jj_consume_token(STRING);
  }

  final public void character_literal() throws ParseException {
    jj_consume_token(CHARACTER);
  }

  final public void floating_pt_literal() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FLOATONE:
      jj_consume_token(FLOATONE);
      break;
    case FLOATTWO:
      jj_consume_token(FLOATTWO);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_3R_26() {
    if (jj_scan_token(25)) return true;
    return false;
  }

  private boolean jj_3R_16() {
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_scan_token(12)) return true;
    Token xsp;
    if (jj_3R_10()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_10()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_11() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3R_35() {
    if (jj_scan_token(24)) return true;
    return false;
  }

  private boolean jj_3R_15() {
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3R_23() {
    if (jj_3R_29()) return true;
    return false;
  }

  private boolean jj_3R_34() {
    if (jj_scan_token(23)) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3R_33() {
    if (jj_scan_token(22)) return true;
    return false;
  }

  private boolean jj_3R_14() {
    if (jj_scan_token(ANOTATION)) return true;
    return false;
  }

  private boolean jj_3R_22() {
    if (jj_3R_28()) return true;
    return false;
  }

  private boolean jj_3R_32() {
    if (jj_scan_token(21)) return true;
    return false;
  }

  private boolean jj_3R_25() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_32()) {
    jj_scanpos = xsp;
    if (jj_3R_33()) {
    jj_scanpos = xsp;
    if (jj_3R_34()) {
    jj_scanpos = xsp;
    if (jj_3R_35()) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3R_21() {
    if (jj_3R_27()) return true;
    return false;
  }

  private boolean jj_3R_20() {
    if (jj_3R_26()) return true;
    return false;
  }

  private boolean jj_3R_19() {
    if (jj_3R_25()) return true;
    return false;
  }

  private boolean jj_3R_17() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_3R_23()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_18() {
    if (jj_3R_24()) return true;
    return false;
  }

  private boolean jj_3R_31() {
    if (jj_scan_token(20)) return true;
    return false;
  }

  private boolean jj_3R_30() {
    if (jj_scan_token(19)) return true;
    return false;
  }

  private boolean jj_3R_24() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_30()) {
    jj_scanpos = xsp;
    if (jj_3R_31()) return true;
    }
    return false;
  }

  private boolean jj_3R_29() {
    if (jj_scan_token(18)) return true;
    return false;
  }

  private boolean jj_3R_13() {
    if (jj_3R_15()) return true;
    return false;
  }

  private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_13()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) return true;
    }
    return false;
  }

  private boolean jj_3R_9() {
    if (jj_scan_token(10)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3R_10() {
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3R_27() {
    if (jj_scan_token(26)) return true;
    return false;
  }

  private boolean jj_3R_28() {
    if (jj_3R_11()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public IDLParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[20];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x0,0x80,0xc00,0xc00,0x800,0x200,0x4000,0xffc0000,0xffc0000,0x8000,0xffc0000,0x20000000,0x8010000,0xffc0000,0x200,0x200,0x180000,0x1e00000,0x70000000,0x80000000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x8,0x8,0x8,0x8,0x0,0x0,0x0,0x8,0x8,0x0,0x8,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x1,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[2];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public IDLParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public IDLParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new IDLParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 20; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 20; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public IDLParser(java.io.Reader stream) {
